Updating per PR review and to make things more test-friendly